--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>
     -->
     
-    <%= javascript_include_tag  'jquery','jquery.min', 'jquery-ui.min','rails', 'application' %>
+    <%= javascript_include_tag  'jquery.min', 'jquery-ui.min','rails', 'application' %>
     <%= yield :javascript_include %>
     <%= yield :javascript_tag %>
     <%= csrf_meta_tag %>
