--- a/app/views/layouts/with_search_header.html.erb
+++ b/app/views/layouts/with_search_header.html.erb
@@ -10,7 +10,7 @@
     <%= stylesheet_link_tag "style" , 'jquery-ui', 'autocomplete', 'stylejv' %>
     <%= yield :stylesheet %>
 
-    <%= javascript_include_tag  'jquery','jquery.min', 'jquery-ui.min','rails', 'application', 'autocomplete-rails','markerclusterer' %>
+    <%= javascript_include_tag  'jquery.min', 'jquery-ui.min','rails', 'application', 'autocomplete-rails','markerclusterer' %>
     
    <!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>-->
    <!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>-->
