--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3431,3 +3431,17 @@ font-weight:normal;
 	font-size:11PX;
 	color:#7DAB13;
 }
+#facebox .title{
+  border-bottom: 1px solid #DDDDDD;
+  margin-bottom: 10px;
+  padding-bottom: 5px;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+#facebox .content{
+  font-size: 12px;
+}
+#facebox .content li{
+  list-style: none;
+}
